--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
         <a class="main-header-logo">
         <img src="img/logo.svg" width="110px" height="17px" alt="Логотип интернет-магазина «Техномарт»">
         </a>
-        <span class="header-search">Поиск:</span>
-        <!-- добавится форма поиска по сайту -->
+        <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
+          <label>
+          <span class="header-search">Поиск:</span>
+          <input type="text" name="search-form" value=" ">
+          </label>
+        </form>
+        <!-- добавилась форма поиска по сайту -->
         <span class="header-bookmarks"><a href="bookmarks.html">Закладки:</a></span>
         <span class="header-cart"><a href="cart.html">Корзина</a></span>
         <span class="header-order"><a href="order.html">Оформить заказ</a></span>
@@ -61,6 +66,8 @@
           <li class="drill-group">
             <strong>Дрели</strong>
             <a href="#" class="drill-tools">Соседям на радость</a>
+            <button "class="button gallery-button gallery-button-back"  type="button"">Назад</button>
+            <button "class="button gallery-button gallery-button-next"  type="button"">Вперед</button>
           </li>
           <li class="discount-group">
             <strong>Скидки 50%</strong>
@@ -172,9 +179,9 @@
         <h2>Сервисы</h2>
         <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
         <ul class="service-list">
-          <li><a href="#" class="service-list-current">Доставка</a></li> <!--Или это должна быть кнопка?-->
-          <li><a href="#">Гарантия</a></li> <!--Или это должна быть кнопка?-->
-          <li><a href="#">Кредит</a></li> <!--Или это должна быть кнопка?-->
+          <li><button class="button service-list-button" type="button">Доставка</button>
+          <li><button class="button service-list-button" type="button">Гарантия</button>
+          <li><button class="button service-list-button" type="button">Кредит</button>
         </ul>
         <div class="service-item-current">
           <h3>Доставка</h3>
@@ -199,6 +206,27 @@
         <p>Вы можете забрать товар сами, заехав в наш офис:</p>
         <a href="#""><img src="img/map.png" width="300px" height="158px" alt="Мы на карте"></a>
         <a class="botton" href="Contacts.html">Заблудились? Напишите нам! </a>
+      </section>
+      <section class="modal modal-map">
+        <img src="img/big_map.png" width="" height="" alt="Вы можете нас найти по адресу: г.Санкт-Петербург, ул. Б. Конюшенная, д.19/8">
+        <button class="button button-close" type="button" aria-label="Закрыть окно с картой"></button>
+      </section>
+      <section class="modal modal-write-us">
+        <form class="write-us" action="https://echo.htmlacademy.ru" method="post">
+          <fieldset>
+            <label>Ваше имя:
+              <input class="user-name" type="text" name="user-name" placeholder="Имя Фамилия">
+            </label>
+            <label>Ваш e-mail:
+              <input class="user-emale" type="e-mail" name="user-emale" placeholder="email@example.com">
+            </label>
+            <label>Текст письма:
+              <input class="user-question" type=text" name="user-question" placeholder="В свободной форме">
+            </label>
+            <button class="button button-submit" type="submit">Отправить</button>
+            <button class="button button-close" type="button" aria-label="Закрыть окно"></button>
+          </fieldset>
+        </form>
       </section>
     </main> 
     <footer  class="main-footer">
