--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
         <h2>Сервисы</h2>
         <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
         <ul class="service-list">
-          <li><button class="button service-list-button" type="button">Доставка</button>
-          <li><button class="button service-list-button" type="button">Гарантия</button>
-          <li><button class="button service-list-button" type="button">Кредит</button>
+          <li><button class="button service-list-button" type="button">Доставка</button></li>
+          <li><button class="button service-list-button" type="button">Гарантия</button></li>
+          <li><button class="button service-list-button" type="button">Кредит</button></li>
         </ul>
         <div class="service-item-current">
           <h3>Доставка</h3>
@@ -208,7 +208,7 @@
         <a class="botton" href="Contacts.html">Заблудились? Напишите нам! </a>
       </section>
       <section class="modal modal-map">
-        <img src="img/big_map.png" width="" height="" alt="Вы можете нас найти по адресу: г.Санкт-Петербург, ул. Б. Конюшенная, д.19/8">
+        <img src="img/big_map.png" width="940" height="446" alt="Вы можете нас найти по адресу: г.Санкт-Петербург, ул. Б. Конюшенная, д.19/8">
         <button class="button button-close" type="button" aria-label="Закрыть окно с картой"></button>
       </section>
       <section class="modal modal-write-us">
