--- a/index.html
+++ b/index.html
@@ -147,32 +147,34 @@
       <!-- Окончание секции к бонусному заданию "популярные товары"-->
       <!-- Популярные производители инструмента -->
       <section class="popular-maker">
-        <h2>Популярные производители:</h2>
-        <a href="#" class="all-popular-maker">Все производители</a>
+        <div class="popular-maker-tittle">
+          <h2>Популярные производители:</h2>
+          <a href="#" class="all-popular-maker">Все производители</a>
+        </div>
         <ul class="popular-maker-list">
           <li class="popular-maker-item">
-            <a href="#"><img src="img/bosch-logo.jpg" width="" height="" alt="Инструмент производства Bosch"></a>
+            <a href="#"><img src="img/bosch-logo.png" width="126" height="37" alt="Инструмент производства Bosch"></a>
           </li>
           <li class="popular-maker-item">
-            <a href="#"><img src="img/makita-logo.jpg" width="" height="" alt="Инструмент производства Makita"></a>
+            <a href="#"><img src="img/makita-logo.png" width="123" height="40" alt="Инструмент производства Makita"></a>
           </li>
           <li class="popular-maker-item">
-            <a href="#"><img src="img/DeWalt-logo.jpg" width="" height="" alt="Инструмент производства DeWalt"></a>
+            <a href="#"><img src="img/DeWalt-logo.png" width="146" height="44" alt="Инструмент производства DeWalt"></a>
           </li>
           <li class="popular-maker-item">
-            <a href="#"><img src="img/interskol-logo.jpg" width="" height="" alt="Инструмент производства Интерскол"></a>
+            <a href="#"><img src="img/interskol-logo.png" width="200" height="88" alt="Инструмент производства Интерскол"></a>
           </li>
           <li class="popular-maker-item">
-            <a href="#"><img src="img/hitachi-logo.jpg" width="" height="" alt="Инструмент производства Hitachi"></a>
+            <a href="#"><img src="img/hitachi-logo.png" width="169" height="31" alt="Инструмент производства Hitachi"></a>
           </li>
           <li class="popular-maker-item">
-            <a href="#"><img src="img/LG-logo.jpg" width="" height="" alt="Инструмент производства LG"></a>
+            <a href="#"><img src="img/LG-logo.png" width="121" height="73" alt="Инструмент производства LG"></a>
           </li>
           <li class="popular-maker-item">
-            <a href="#"><img src="img/AEG-logo.jpg" width="" height="" alt="Инструмент производства AEG"></a>
+            <a href="#"><img src="img/AEG-logo.png" width="151" height="96" alt="Инструмент производства AEG"></a>
           </li>
           <li class="popular-maker-item">
-            <a href="#"><img src="img/Metabo-logo.jpg" width="" height="" alt="Инструмент производства Metabo"></a>
+            <a href="#"><img src="img/Metabo-logo.png" width="204" height="69" alt="Инструмент производства Metabo"></a>
           </li>
         </ul>
       </section>
@@ -192,24 +194,26 @@
           <img src="img/truck.png" width="" height="" alt="">
         </section>
       </section>
-      <section class="features">
-        <h2 class="visually-hidden">Преимущества техномарта</h2>
-        <h3>Компания Техномарт</h3>
-        <p>Настоящий мужской шопинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит любителей сэкономить на гастарбайтерах</p>
-        <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
-        <ul class="transport-list">
-          <li>Деловые Линии</li>
-          <li>Автотрейдинг</li>
-          <li>ЖелДорЭкспедиция</li>
-        </ul>
-        <a class="botton" href="About.html">Подробнее о компании</a>
-      </section>
-      <section class="contacts">
-        <h2>Контакты</h2>
-        <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-        <a href="#"><img src="img/map.png" width="300px" height="158px" alt="Мы на карте"></a>
-        <a class="botton" href="Contacts.html">Заблудились? Напишите нам! </a>
-      </section>
+      <div class="dilivery-contacts">
+        <section class="features">
+          <h2 class="visually-hidden">Преимущества техномарта</h2>
+          <h3>Компания Техномарт</h3>
+          <p>Настоящий мужской шопинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит любителей сэкономить на гастарбайтерах</p>
+          <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
+          <ul class="transport-list">
+            <li>Деловые Линии</li>
+            <li>Автотрейдинг</li>
+            <li>ЖелДорЭкспедиция</li>
+          </ul>
+          <a class="botton" href="About.html">Подробнее о компании</a>
+        </section>
+        <section class="contacts">
+          <h2>Контакты</h2>
+          <p>Вы можете забрать товар сами, заехав в наш офис:</p>
+          <a href="#"><img src="img/map.png" width="300px" height="158px" alt="Мы на карте"></a>
+          <a class="botton" href="Contacts.html">Заблудились? Напишите нам! </a>
+        </section>
+      </div>
       <section class="modal modal-map">
         <img src="img/big_map.png" width="940" height="446" alt="Вы можете нас найти по адресу: г.Санкт-Петербург, ул. Б. Конюшенная, д.19/8">
         <button class="button button-close" type="button" aria-label="Закрыть окно с картой"></button>
