--- a/catalog.html
+++ b/catalog.html
@@ -11,21 +11,23 @@
   <body>
   <header class="main-header">
     <section class="header-top-menu">
-      <a class="main-header-logo" href="index.html">
-        <img src="img/logo.svg" width="110px" height="17px" alt="Логотип интернет-магазина «Техномарт»">
-      </a>
-      <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
-          <label>
-          <span class="header-search">Поиск:</span>
-          <input type="text" name="search-form" value=" ">
-          </label>
-        </form>
-        <!-- добавилась форма поиска по сайту -->
-      <span class="header-bookmarks"><a href="bookmarks.html">Закладки:</a></span>
-      <span class="header-cart"><a href="cart.html">Корзина</a></span>
-      <span class="header-order"><a href="order.html">Оформить заказ</a></span>
+      <div class="header-top-content container">
+        <a class="main-header-logo" href="index.html">
+          <img src="img/logo.svg" width="110px" height="17px" alt="Логотип интернет-магазина «Техномарт»">
+        </a>
+        <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
+            <label>
+            <span class="header-search">Поиск:</span>
+            <input type="text" name="search-form" value=" ">
+            </label>
+          </form>
+          <!-- добавилась форма поиска по сайту -->
+        <span class="header-bookmarks"><a href="bookmarks.html">Закладки:</a></span>
+        <span class="header-cart"><a href="cart.html">Корзина</a></span>
+        <span class="header-order"><a href="order.html">Оформить заказ</a></span>
+      </div>
     </section>
-    <section class="header-middle">
+    <section class="header-middle container">
       <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
       <p class="header-contacts">
         <span>+7(812)555-05-55</span><br>
@@ -36,7 +38,7 @@
         <li class="registration"><a href="#">Регистрация</a></li>
       </ul>
     </section>
-    <nav class="main-navigation">
+    <nav class="inner-navigation container">
       <ul class="site-navigation">
         <li><a href="index.html">Главная</a></li>
         <li><a href="About.html">Компания</a></li>
@@ -55,7 +57,7 @@
         <li><a href="tools.html">Инструмент</a></li>
         <li class="breadcrumbs-current">Перфораторы</li>
     </ul>
-    <h2>Перфораторы</h2>
+    <h2 class="catalog-main-title">Перфораторы</h2>
     <section class="filters">
       <h3 class="filters-title">Фильтр</h3>
       <form class="filters" method="get">
