--- a/index.html
+++ b/index.html
@@ -37,17 +37,19 @@
           <li class="registration"><a href="#">Регистрация</a></li>
         </ul>
       </section>
-      <nav class="main-navigation container">
-        <ul class="site-navigation">
-          <li class="site-navigation-current">Главная</li>
-          <li><a href="About.html">Компания</a></li>
-          <li><a href="Catalog.html">Каталог</a></li>
-          <li><a href="News.html">Новости</a></li>
-          <li><a href="Special.html">Спецпредложения</a></li>
-          <li><a href="Dilivery.html">Доставка</a></li>
-          <li><a href="Contacts.html">Контакты</a></li>
-        </ul>
-      </nav> 
+      <div class="container">
+        <nav class="main-navigation">
+          <ul class="site-navigation">
+            <li class="site-navigation-current">Главная</li>
+            <li><a href="About.html">Компания</a></li>
+            <li><a href="Catalog.html">Каталог</a></li>
+            <li><a href="News.html">Новости</a></li>
+            <li><a href="Special.html">Спецпредложения</a></li>
+            <li><a href="Dilivery.html">Доставка</a></li>
+            <li><a href="Contacts.html">Контакты</a></li>
+          </ul>
+        </nav>
+      </div> 
     </header>
     <main class="container">
       <section class="tehnomart-goods">
