--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Интернет-магазин «Техномарт»</title>
     <link rel="stylesheet"  href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=cyrillic-ext,cyrillic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Cuprum:400,700&subset=cyrillic-ext,cyrillic' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <header class="main-header">
@@ -23,7 +23,7 @@
           </form>
           <!-- добавилась форма поиска по сайту -->
           <span class="header-bookmarks"><a href="bookmarks.html">Закладки:</a></span>
-          <span class="header-cart"><a href="cart.html">Корзина</a></span>
+          <span class="header-cart"><a href="cart.html">Корзина:</a></span>
           <span class="header-order"><a href="order.html">Оформить заказ</a></span>
         </div>
       </section>
@@ -132,7 +132,7 @@
               <a class="bookmark" href="bookmarks.html">В закладки</a>
             </p>
           </li>
-          <li class="catalog-item-new">
+          <li class="catalog-item catalog-item-new">
             <p class="catalog-item-image">
               <img src="img/product-3.jpg" width="218" height="170" alt="Перфоратор Bosh BFG 2000">
             </p>
