--- a/catalog.html
+++ b/catalog.html
@@ -265,7 +265,12 @@
             </ul>
           </section>
         </div>
-      </div>   
+      </div> 
+      <section class="about-perforator">
+        <h2>Пара слов о перфораторах</h2>
+        <p>Перфоратор - универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуроповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
+        </p> 
+      </section>  
     </main>
     <footer  class="main-footer">
       <section class="footer-menu container">
