--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="container">
         <nav class="main-navigation">
           <ul class="site-navigation">
-            <li class="site-navigation-current">Главная</li>
+            <li class="site-navigation-current"><a>Главная</a></li>
             <li><a href="About.html">Компания</a></li>
             <li><a href="Catalog.html">Каталог</a></li>
             <li><a href="News.html">Новости</a></li>
