--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
       <div class="container">
         <nav class="main-navigation">
           <ul class="site-navigation">
-            <li class="site-navigation-current"><a>Главная</a></li>
-            <li><a href="About.html">Компания</a></li>
-            <li><a href="Catalog.html">Каталог</a></li>
-            <li><a href="News.html">Новости</a></li>
-            <li><a href="Special.html">Спецпредложения</a></li>
-            <li><a href="Dilivery.html">Доставка</a></li>
-            <li><a href="Contacts.html">Контакты</a></li>
+            <li class="site-navigation-item current-item"><a>Главная</a></li>
+            <li class="site-navigation-item"><a href="About.html">Компания</a></li>
+            <li class="site-navigation-item"><a href="Catalog.html">Каталог</a></li>
+            <li class="site-navigation-item"><a href="News.html">Новости</a></li>
+            <li class="site-navigation-item"><a href="Special.html">Спецпредложения</a></li>
+            <li class="site-navigation-item"><a href="Dilivery.html">Доставка</a></li>
+            <li class="site-navigation-item"><a href="Contacts.html">Контакты</a></li>
           </ul>
         </nav>
       </div> 
