--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
       <section class="tehnomart-goods">
         <h2 class="visually-hidden">Товары компании Техномарт</h2>
         <ul class="tehnomart-goods-group">
-          <li class="goods-group new-goods">
+          <li class="goods-group">
+            <div class="flag flag-new">новинка</div>
             <strong>Материалы</strong>
             <a href="#" class="catalog-materials">на любой вкус</a>
           </li>
@@ -74,13 +75,15 @@
             <button "class="button gallery-button gallery-button-back"  type="button"">Назад</button>
             <button "class="button gallery-button gallery-button-next"  type="button"">Вперед</button>
           </li>
-          <li class="discount-group">
-            <strong>Скидки 50%</strong>
-            <a href="#" class="catalog-tools">на 350 товаров</a>
-          </li>
-          <li class="free-dilivery-group">
-            <strong>Доставка</strong>
-            <a href="#" class="catalog-tools">Бесплатно</a>
+          <li class="special-offer">
+            <div class="discount-group">
+              <strong>Скидки 50%</strong>
+              <a href="#" class="catalog-tools">на 350 товаров</a>
+            </div>
+            <div class="free-dilivery-group">
+              <strong>Доставка</strong>
+              <a href="#" class="catalog-tools">Бесплатно</a>
+            </div>
           </li>
         </ul>
       </section>
@@ -195,7 +198,6 @@
         <section class="service-delivery">
           <h3>Доставка</h3>
           <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
-          <img src="img/truck.png" width="" height="" alt="">
         </section>
       </section>
       <div class="dilivery-contacts">
@@ -248,9 +250,9 @@
           Все права защищены
           </p>
           <ul class="social">
-            <li><a class="social" href="#"><img src="img/vk-icon.svg" width="26px" height="15px" alt="Вконтакте"></a></li>
-            <li><a class="social" href="#"><img src="img/facebook-icon.svg" width="12px" height="22px" alt="Фэйсбук"></a></li>
-            <li><a class="social" href="#"><img src="img/instagram-icon.svg" width="21px" height="21px" alt="Инстаграм"></a></li>
+            <li><a class="social-item" href="#"><img src="img/vk-icon.svg" width="26px" height="15px" alt="Вконтакте"></a></li>
+            <li><a class="social-item" href="#"><img src="img/facebook-icon.svg" width="12px" height="22px" alt="Фэйсбук"></a></li>
+            <li><a class="social-item" href="#"><img src="img/instagram-icon.svg" width="21px" height="21px" alt="Инстаграм"></a></li>
           </ul>
           <p class="footer-feedback">
           Обратная связь:<br> 
